--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,10 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+
 body {
     background-color: #dc7633;
     font-family: 'Trebuchet MS', sans-serif;
@@ -36,23 +43,25 @@ body {
     text-align: center;
 } 
 
-
 #gameContainer {
+    margin-top: 20px;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3, 100px);
-    width: 300px; 
+    grid-template-columns: repeat(3, calc(33.33%));
+    grid-template-rows: repeat(3, calc(33.33%));
+    width: 500px; 
     height: 500px; 
-    background-color: white;
+    gap: 1px;
 }
 
-.tile {
-    border: 1px solid palegreen;
-    min-width: 100px;
-    min-height: 100px;
+.tiles {
+    border: 3px solid black;
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 50px;
     cursor: pointer;
+    padding: 10px; 
+    width: 100%;  
+    height: 100%;
+    box-sizing: border-box;
 }
