--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,6 @@
     box-sizing: border-box;
 }
 
-
 body {
     background-color: #dc7633;
     font-family: 'Trebuchet MS', sans-serif;
@@ -48,8 +47,8 @@ body {
     display: grid;
     grid-template-columns: repeat(3, calc(33.33%));
     grid-template-rows: repeat(3, calc(33.33%));
-    width: 500px; 
-    height: 500px; 
+    width: 600px; 
+    height: 600px; 
     gap: 1px;
 }
 
@@ -64,4 +63,9 @@ body {
     width: 100%;  
     height: 100%;
     box-sizing: border-box;
+}
+
+.imagesClass{
+    width: 80%;
+    height: auto;
 }
