--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,7 @@ body {
     border: none;
     padding: 10px 20px;
     border-radius: 12px;
+    top: 50%;
     cursor: pointer;
     position: relative;
 }
@@ -68,4 +69,29 @@ body {
 .imagesClass{
     width: 80%;
     height: auto;
+}
+
+#choiceOptions{
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 500px;
+    height: 500px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
+h1 {
+    margin-bottom: 20px;
+}
+
+.optionsImages{
+    cursor: pointer;
+    width: 150px;
+    height: 150px;
+    margin: 10px;
+    display: inline-block;
 }
