--- a/styles.css
+++ b/styles.css
@@ -48,8 +48,8 @@ body {
 #gameContainer {
     margin-top: 20px;
     display: grid;
-    grid-template-columns: repeat(3, calc(33.33%));
-    grid-template-rows: repeat(3, calc(33.33%));
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
     width: 400px; 
     height: 400px; 
     gap: 1px;
@@ -90,7 +90,5 @@ h1 {
     margin-bottom: 20px;
 }
 
-#timer {
-    left: 75%;
-}
+
 
